--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.3.0",
+    "react-toastify": "^11.0.5",
     "zod": "^3.24.2"
   },
   "devDependencies": {
