--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^2.2.0",
     "@hookform/resolvers": "^4.1.3",
     "@xchainjs/xchain-midgard": "^0.5.13",
+    "@xchainjs/xchain-util": "^1.0.8",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
