Integrate runebond API

--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,5 @@
-VITE_INITIAL_HEIGHT=
 VITE_FEATURE_FLAG_ENFORCE_ADDRESS=
 VITE_FEATURE_FLAG_ENFORCE_NODE_OPERATOR=
 VITE_TEST_FAKE_NODE_OPERATOR=
+VITE_RUNEBOND_ADDRESS=
+VITE_RUNEBOND_API_URL=
