--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@hookform/resolvers": "^4.1.3",
+    "@xchainjs/xchain-crypto": "^0.3.7",
     "@xchainjs/xchain-midgard": "^0.5.13",
+    "@xchainjs/xchain-thorchain": "^2.0.14",
     "@xchainjs/xchain-util": "^1.0.8",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.344.0",
@@ -37,7 +39,8 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2"
+    "vite": "^5.4.2",
+    "vite-plugin-node-polyfills": "^0.23.0"
   },
   "engines": {
     "node": ">=18.17.0"
