--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@cosmjs/proto-signing": "^0.33.1",
+    "@cosmjs/stargate": "^0.33.1",
     "@headlessui/react": "^2.2.0",
     "@hookform/resolvers": "^4.1.3",
+    "@xchainjs/xchain-cosmos-sdk": "^1.0.12",
     "@xchainjs/xchain-crypto": "^0.3.7",
     "@xchainjs/xchain-midgard": "^0.5.13",
     "@xchainjs/xchain-thorchain": "^2.0.14",
     "@xchainjs/xchain-thornode": "^0.3.22",
     "@xchainjs/xchain-util": "^1.0.8",
+    "cosmjs-types": "^0.9.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.7.4",
     "lucide-react": "^0.344.0",
