--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@xchainjs/xchain-thorchain": "^2.0.14",
     "@xchainjs/xchain-thornode": "^0.3.22",
     "@xchainjs/xchain-util": "^1.0.8",
+    "chart.js": "^4.4.9",
     "cosmjs-types": "^0.9.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.7.4",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-intersection-observer": "^9.16.0",
