--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "@cosmjs/stargate": "^0.33.1",
     "@headlessui/react": "^2.2.0",
     "@hookform/resolvers": "^4.1.3",
+    "@tsparticles/all": "^3.8.1",
+    "@tsparticles/engine": "^3.8.1",
+    "@tsparticles/preset-fire": "^3.2.0",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.8.1",
     "@xchainjs/xchain-cosmos-sdk": "^1.0.12",
     "@xchainjs/xchain-crypto": "^0.3.7",
     "@xchainjs/xchain-midgard": "^0.5.13",
